2008-10-18  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (singleDstNegation::processNext): while
	processing single object negation, consider hosts and firewalls
	with one normal interface and loopback interface
	eligible (i.e. ignore loopback address even though formally such
	object has at least two ip addresses).

	* PolicyCompiler_ipt.cpp (singleDstNegation::processNext): fixed
	bug (no #): policy compiler for iptables did not handle correctly
	rules where a host that has multiple addresses was a single object
	in a rule element and had negation.

	* NATCompiler_ipt.cpp (singleObjectNegation::processNext): added
	support for single object negation in OSrc and ODst in NAT rules.
	This provides for more compact iptables script in the often used
	case where single object is used with negation in these elements
	of a NAT rule. Other improvements in handling NAT rules with
	negation.

2008-10-15  vadim  <vadim@vk.crocodile.org>

	* ipt.cpp (dumpScript): Explicitly use "\n" instead of endl to
	avoid implicit conversion to "\r\n" on Windows (generated script
	is for iptables which can only run on Linux, so it is safe to use
	"\n" instead of endl).

2008-10-13  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (PolicyCompiler_ipt::compile): fixed
	bug (no #): policy compiler for iptables would crash with
	assertion when AddressTable or DNSName object was used in a rule
	in pure mangle table ruleset. This could be related to crash
	reported in bug #2157121.

2008-10-11  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (finalizeChain::processNext): Always
	placing rules with action "Accept" in table mangle in chain
	PREROUTING

	* RuleSetDialog.cpp (RuleSetDialog::loadFWObject): Added attribute
	to the Policy object for iptables to indicate that this policy
	ruleset should be compiled into filter and mangle tables or only
	for the mangle table. This makes sense (and is only shown) for