@@ -1,3 +1,10 @@
+2008-10-19  vadim  <vadim@vk.crocodile.org>
+
+	* PolicyCompiler_PrintRule.cpp (PrintRule::_printTimeInterval):
+	fixed bug #2180556: "broken support for the "old" time module for
+	iptables". Compiler generated incorrect parameters for the "time"
+	module for versions <1.4.0
+
 2008-10-18  vadim  <vadim@vk.crocodile.org>
 
 	* PolicyCompiler_ipt.cpp (singleDstNegation::processNext): while
